test/ui/recnot/unexpected-key-in-list.stderr
error: found ‘:’ but expected ‘,’
  ┌─ ${TEST_FOLDER}/recnot/unexpected-key-in-list.recnot:1:13
  │
1 │ list: [first: 0, second: 2]
  │             ═

error: aborting due to previous error

