test/ui/recnot/unexpected-key-in-list.recnot
list: [first: 0, second: 2]
